force-app/main/default/objects/TestBuildObject__c/TestBuildObject__c.object-meta.xml
<CustomObject>
    <description>Test Build</description>
    <label>TestBuildObject</label>
    <nameField>
        <label>TestBuildObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestBuildObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>