force-app/main/default/objects/TestBuildObject__c/fields/TestBuild_Date__c.field-meta.xml
<CustomField>
    <fullName>TestBuild_Date__c</fullName>
    <description>Date</description>
    <label>TestBuild Date</label>
    <type>Date</type>
</CustomField>