force-app/main/default/objects/TestBuildObject__c/fields/TestBuildEmail__c.field-meta.xml
<CustomField>
    <fullName>TestBuildEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <complianceGroup>PCI</complianceGroup>
    <description>Email Data</description>
    <externalId>true</externalId>
    <label>TestBuildEmail</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>