force-app/main/default/objects/TestBuildObject__c/fields/TestBuildText__c.field-meta.xml
<CustomField>
    <fullName>TestBuildText__c</fullName>
    <complianceGroup>PII;HIPAA;GDPR;PCI;COPPA;CCPA</complianceGroup>
    <description>Text Box</description>
    <label>TestBuildText</label>
    <length>18</length>
    <type>Text</type>
</CustomField>